--- a/Chips/PPUSim/Scripts/VS2026/PPUSim.vcxproj.filters
+++ b/Chips/PPUSim/Scripts/VS2026/PPUSim.vcxproj.filters
@@ -57,7 +57,7 @@
     <ClCompile Include="..\..\scroll_regs.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="..\..\sprite_eval.cpp">
+    <ClCompile Include="..\..\obj_eval.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="..\..\video_out.cpp">
@@ -122,7 +122,7 @@
     <ClInclude Include="..\..\scroll_regs.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="..\..\sprite_eval.h">
+    <ClInclude Include="..\..\obj_eval.h">
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="..\..\video_out.h">
