--- a/.github/workflows/UnitTest.yml
+++ b/.github/workflows/UnitTest.yml
@@ -28,7 +28,7 @@ jobs:
     - name: Add MSBuild to PATH
       uses: microsoft/setup-msbuild@v1.1
       with:
-        vs-version: '[16.4,16.5)'
+        vs-prerelease: true
 
     - name: Build
       working-directory: ${{env.GITHUB_WORKSPACE}}
