--- a/.github/workflows/UnitTest.yml
+++ b/.github/workflows/UnitTest.yml
@@ -27,6 +27,8 @@ jobs:
 
     - name: setup-msbuild
       uses: microsoft/setup-msbuild@v2
+      with:
+        vs-version: 11222.16
 
     - name: Build
       working-directory: ${{env.GITHUB_WORKSPACE}}
